--- a/src/app/features/first-login/add-user/add-user.component.html
+++ b/src/app/features/first-login/add-user/add-user.component.html
@@ -6,7 +6,7 @@
           <form class="update-info__form" *ngIf="addUserForm" [formGroup]="addUserForm">
             <div class="row">
               <div class="col-md-12">
-                <h3 class="user-profile text-center text-uppercase p-t-2 p-b-4">Invite Team Members</h3>
+                <h3 class="user-profile text-center text-uppercase pt-2 pb-4">Invite Team Members</h3>
               </div>
             </div>
 
