--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -105,7 +105,7 @@
             <div class="row">
               <div class="col-sm-6">
                 <!-- country -->
-                <mat-form-field class="border-select mat-form-field-flex-mm-padding w-100 p-l-4 p-r-4 ml-1">
+                <mat-form-field class="border-select mat-form-field-flex-mm-padding w-100 pl-4 pr-4 ml-1">
                   <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
                     <div class="display-flex">
                       <input
