--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -1,17 +1,14 @@
 <div class="dashboard app-dashboard">
-  <div class="container-fluid bg-gray p-l-0 p-r-3">
-    <!-- <div class="container-fluid bg-gray p-l-0 p-r-3 mt-120"> -->
+  <div class="container-fluid bg-gray pl-0 pr-3">
     <div class="row">
-      <!-- <sidebar-navigation (collapseMenu)="isSidebarCollapsed($event)"></sidebar-navigation> -->
-      <!-- [class.changeWidth]="isSideNavCollapsed" -->
       <div class="col-md-12">
         <div class="row">
-          <div class="col-sm-12 p-l-3 d-none">
+          <div class="col-sm-12 pl-3 d-none">
             <app-breadcrumb></app-breadcrumb>
           </div>
         </div>
-        <div class="row m-t-3">
-          <div class="col-sm-12 col-md-9 p-l-3" [ngClass]="isMobile ? 'p-r-0' : ''">
+        <div class="row m-t3">
+          <div class="col-sm-12 col-md-9 pl-3" [ngClass]="isMobile ? 'p-r-0' : ''">
             <div class="things-to-do bg-white mb-4 equal-height sml-d1">
               <!-- <h5 class="mb-3">Things to do</h5> -->
               <div class="things-to-do__inner d-flex justify-content-between align-items-center sml-db">
