--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -152,7 +152,7 @@
           <ng-container *ngIf="(poApprovalDetailsTemp && permissionObj.poApprovalFlag) || poDraftedDetailsTemp || acceptedRejectedPOListTemp; else emptyReports">
             <div *ngIf="poApprovalDetailsTemp && permissionObj.poApprovalFlag">
               <mat-expansion-panel class="myPanel mb-2" [expanded]="true">
-                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'p-t-2 p-b-2' : ''">
+                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'pt-2 pb-2' : ''">
                   <mat-panel-title> P.O. For Approval </mat-panel-title>
                 </mat-expansion-panel-header>
 
@@ -218,7 +218,7 @@
 
             <div *ngIf="poDraftedDetailsTemp">
               <mat-expansion-panel class="myPanel mb-2" [expanded]="true">
-                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'p-t-2 p-b-2' : ''">
+                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'pt-2 pb-2' : ''">
                   <mat-panel-title> Drafted P.O. </mat-panel-title>
                 </mat-expansion-panel-header>
 
@@ -280,7 +280,7 @@
 
             <div *ngIf="acceptedRejectedPOListTemp">
               <mat-expansion-panel class="myPanel mb-2" [expanded]="true">
-                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'p-t-2 p-b-2' : ''">
+                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'pt-2 pb-2' : ''">
                   <mat-panel-title>
                     <div class="col-xs-5 text-left approved">Approved P.O.</div>
                     <!-- <div class="col-xs-7 text-right grn-note">
