--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -49,7 +49,7 @@
       *ngIf="addRfq.rfqCurrency != null && addRfq.rfqCurrency.exchangeCurrencyName != null"
       [ngClass]="isMobile ? 'p-t-3' : 'p-t-10'"
     >
-      <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'fontsize-12-px mcrncy p-t-2 p-b-2' : 'p-t-10 p-b-10'">
+      <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'fontsize-12-px mcrncy pt-2 pb-2' : 'p-t-10 p-b-10'">
         <span class="font-size-vary-grn color-grey">
           <img width="25px" *ngIf="addRfq.rfqCurrency.exchangeCurrencyFlag" [src]="addRfq.rfqCurrency.exchangeCurrencyFlag" />
           {{ addRfq.rfqCurrency.exchangeCurrencyName }}
@@ -69,7 +69,7 @@
     <div *ngFor="let project of rfqDetails | SearchPipe: searchProject:['projectName']; let p = index" [formGroupName]="p">
       <mat-accordion *ngIf="rfqDetails" class="rfq-detail-body">
         <mat-expansion-panel class="myPanel" [expanded]="true" [ngClass]="isMobile ? 'mt-2' : ''">
-          <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px p-t-4 p-b-4' : ''">
+          <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px pt-4 pb-4' : ''">
             <mat-panel-title>
               {{ project.projectName }}
 
