--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -7,7 +7,7 @@
       </button>
     </mat-form-field>
   </div>
-  <div class="col-md-6 col-xs-12 text-right m-itm" [ngClass]="isMobile ? 'p-t-0 p-b-0 p-l-0 p-r-2 sm-btn1' : ''">
+  <div class="col-md-6 col-xs-12 text-right m-itm" [ngClass]="isMobile ? 'pt-0 pb-0 pl-0 pr-2 sm-btn1' : ''">
     <span (click)="selectCurrency()" class="text-decoration-underline main-color font-size-vary-grn p-r-10 text-semi-bold cursor-pointer">Select Currency</span>
     <span class="p-r-5">
       <span
@@ -49,9 +49,9 @@
   <div
     class="col-md-12 col-xs-6 p-b-20 text-right m-itm"
     *ngIf="rfqData && rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null"
-    [ngClass]="isMobile ? 'p-t-3' : 'p-t-10'"
+    [ngClass]="isMobile ? 'pt-3' : 'p-t-10'"
   >
-    <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'fontsize-12-px mcrncy p-t-2 p-b-2' : 'p-t-10 p-b-10'">
+    <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'fontsize-12-px mcrncy pt-2 pb-2' : 'p-t-10 p-b-10'">
       <span class="font-size-vary-grn color-grey">
         <img width="25px" *ngIf="rfqData.rfqCurrency.exchangeCurrencyFlag" [src]="rfqData.rfqCurrency.exchangeCurrencyFlag" />
         {{ rfqData.rfqCurrency.exchangeCurrencyName }}
@@ -68,10 +68,10 @@
 
 <form *ngIf="allSuppliers.length" [formGroup]="supplierForm">
   <div class="example-container mat-elevation-z8">
-    <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:['supplier_name']" formArrayName="forms" class="mat-elevation-z4 col-sm-12 m-t-3">
+    <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:['supplier_name']" formArrayName="forms" class="mat-elevation-z4 col-sm-12 mt-3">
       <ng-container matColumnDef="Supplier Name">
         <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
-        <td mat-cell *matCellDef="let element; let i = index" [formGroupName]="i" class="p-t-2">
+        <td mat-cell *matCellDef="let element; let i = index" [formGroupName]="i" class="pt-2">
           <mat-checkbox #ch [checked]="element.checked" (change)="valueChange(element, ch, i)"> </mat-checkbox>
           <span class="supplier-name ml-3 position-absolute">{{ element.supplier_name }}</span>
           <span class="d-block supplier-rates rfq-supplier-rates minwidth-150-px">
