--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point p-t-4">
+<div class="page-start-point pt-4">
   <div *ngIf="!submittedRfqListTemp && !nonSubmittedRfqListTemp && rfqCount === 0" class="parent min-height">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img">
@@ -140,7 +140,7 @@
             </mat-accordion>
             <mat-accordion *ngIf="nonSubmittedRfqListTemp">
               <mat-expansion-panel class="myPanel" [expanded]="true">
-                <mat-expansion-panel-header [ngClass]="isMobile ? 'p-t-3 p-b-3' : ''">
+                <mat-expansion-panel-header [ngClass]="isMobile ? 'pt-3 pb-3' : ''">
                   <mat-panel-title> Quotes Not Received </mat-panel-title>
                 </mat-expansion-panel-header>
 
@@ -228,7 +228,7 @@
         <ng-template #emptyReports>
           <div class="d-block text-align-center m-t-3">
             <img src="../../../../assets/images/empty-report.svg" alt="empty report" />
-            <p class="font-weight-light m-0 p-t-3"><strong class="font-weight500">Oops!</strong> You have nothing to see.</p>
+            <p class="font-weight-light m-0 pt-3"><strong class="font-weight500">Oops!</strong> You have nothing to see.</p>
             <p class="font-weight-light m-0 mt-1">Try Again !</p>
           </div>
         </ng-template>
