--- a/src/app/shared/components/subscriptions/subscription-cancel/cancel-subscription-dialog.component.html
+++ b/src/app/shared/components/subscriptions/subscription-cancel/cancel-subscription-dialog.component.html
@@ -5,10 +5,10 @@
   </button>
 </div>
 
-<div class="pt-5 p-b-5 redirections text-align-center">
+<div class="pt-5 pb-5 redirections text-align-center">
   <h2 class="font-size-26px mb-3">Do you Really Wish to Unsubscribe This Plan?</h2>
 
-  <div class="shadow-tag p-l-4 p-r-4 p-t-3 p-b-3" [ngClass]="isMobile ? 'w-100' : 'w-75'">
+  <div class="shadow-tag pl-4 pr-4 pt-3 pb-3" [ngClass]="isMobile ? 'w-100' : 'w-75'">
     We don't want to see you go
     <br />
     we promise security of your data until next payment
@@ -17,6 +17,6 @@
   </div>
 
   <div [ngClass]="isMobile ? 'mt-4' : 'mt-5'">
-    <button mat-button class="brand-bg-color p-l-5 p-r-5 fontsize-18-px p-b-2 p-t-2" (click)="cancelSubscription()">Unsubscribe</button>
+    <button mat-button class="brand-bg-color pl-5 pr-5 fontsize-18-px pb-2 pt-2" (click)="cancelSubscription()">Unsubscribe</button>
   </div>
 </div>
