--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -1,5 +1,5 @@
 <!-- <fix-header></fix-header> -->
-<div class="page-start-point mt-5 p-t-4">
+<div class="page-start-point mt-5 pt-4">
   <div class="dashboard-unique p-b-20 min-height parent">
     <div class="row">
       <div class="col-sm-12 p-l-10 p-r-10">
