--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point mt-5 p-t-4">
+<div class="page-start-point mt-5 pt-4">
   <div class="dashboard-unique p-b-20 min-height parent">
     <div class="row">
       <div class="col-sm-12 p-l-10 p-r-10">
@@ -184,7 +184,7 @@
         </ng-container>
 
         <ng-template #emptyReports>
-          <div class="d-block text-align-center m-t-3">
+          <div class="d-block text-align-center mt-3">
             <img src="../../../../assets/images/empty-report.svg" alt="empty report" />
             <p class="font-weight-light m-0 pt-3"><strong class="font-weight500">Oops!</strong> You have nothing to see.</p>
             <p class="font-weight-light m-0 mt-1">Try Again !</p>
