--- a/src/app/features/indent/single-indent-details/single-indent-details.component.html
+++ b/src/app/features/indent/single-indent-details/single-indent-details.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point mt-5 p-t-4">
+<div class="page-start-point mt-5 pt-4">
   <div class="row" class="dashboard-unique p-b-20 min-height parent">
     <div class="row">
       <div class="col-sm-12 p-l-10 p-r-10">
