--- a/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
+++ b/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
@@ -24,7 +24,7 @@
     </div>
 
     <!-- Supplier details section -->
-    <div class="supplier-details p-t-4">
+    <div class="supplier-details pt-4">
       <h5>Supplier's Details</h5>
 
       <div class="row">
