--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -47,7 +47,7 @@
     <div
       class="col-md-12 col-xs-6 p-b-20 text-right m-itm"
       *ngIf="addRfq.rfqCurrency != null && addRfq.rfqCurrency.exchangeCurrencyName != null"
-      [ngClass]="isMobile ? 'p-t-3' : 'p-t-10'"
+      [ngClass]="isMobile ? 'pt-3' : 'p-t-10'"
     >
       <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'fontsize-12-px mcrncy pt-2 pb-2' : 'p-t-10 p-b-10'">
         <span class="font-size-vary-grn color-grey">
