--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <ng-container *ngIf="isMobile">
-      <p class="text-right m-t-3 mb-2">
+      <p class="text-right mt-3 mb-2">
         <button mat-button class="fltr-btn" (click)="openFilter()">
           <mat-icon class="brand-color" inline="true">filter_list</mat-icon>
           <span class="color-6d6a6a fontsize-18-px ml-2">Filter</span>
