--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -371,7 +371,7 @@
           </ng-container>
 
           <ng-template #emptyReports>
-            <div class="d-block text-align-center m-t-3">
+            <div class="d-block text-align-center mt-3">
               <img src="../../../../assets/images/empty-report.svg" alt="empty report" />
               <p class="font-weight-light m-0 pt-3"><strong class="font-weight500">Oops!</strong> You have nothing to see.</p>
               <p class="font-weight-light m-0 mt-1">Try Again !</p>
