--- a/src/app/shared/dialogs/release-notes/release-notes.component.html
+++ b/src/app/shared/dialogs/release-notes/release-notes.component.html
@@ -19,7 +19,7 @@
           </div>
         </span>
       </div>
-      <div class="col-sm-12 list-of-notes m-t-3">
+      <div class="col-sm-12 list-of-notes mt-3">
         <ol>
           <li *ngFor="let item of note.items">
             {{ item.description }}
@@ -36,7 +36,7 @@
           </div>
         </span>
       </div>
-      <div class="col-sm-12 list-of-notes m-t-3">
+      <div class="col-sm-12 list-of-notes mt-3">
         <ol>
           <li *ngFor="let item of note.items">
             {{ item.description }}
