--- a/src/app/shared/dialogs/tax-cost/tax-cost.component.html
+++ b/src/app/shared/dialogs/tax-cost/tax-cost.component.html
@@ -56,7 +56,7 @@
                     *ngIf="i == taxCostForm.get('taxInfo').value.length - 1"
                     [ngClass]="[!checkValidation ? 'main-color-faded' : 'main-color']"
                     matRipple
-                    class="material-icons cursor-pointer m-t-3"
+                    class="material-icons cursor-pointer mt-3"
                     (click)="addNewTaxField()"
                   >
                     add_circle
