--- a/src/app/shared/dialogs/upload-image/upload-image.component.html
+++ b/src/app/shared/dialogs/upload-image/upload-image.component.html
@@ -15,7 +15,7 @@
             <span class="uploaded-filename" *ngIf="subFileName && !errorMessage && isDisplayErr">{{ subFileName }} has been successfully uploaded.</span>
           </div>
 
-          <div class="d-block mx-auto m-t-3">
+          <div class="d-block mx-auto mt-3">
             <div class="upload-error d-flex align-items-center justify-content-center mx-auto" *ngIf="errorMessage">
               <i class="fa fa-exclamation-circle mr-2"></i> {{ errorMessage }}
             </div>
