--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -351,7 +351,7 @@
               </div>
             </div>
 
-            <div class="col-xs-6 col-sm-4 col-md-3 display-material-indent-po-box last-material-box" [ngClass]="isMobile ? ' m-t-3' : ''">
+            <div class="col-xs-6 col-sm-4 col-md-3 display-material-indent-po-box last-material-box" [ngClass]="isMobile ? ' mt-3' : ''">
               <div
                 *ngIf="permissionObj.purchaseOrderFlag"
                 class="box-custom color-text-card cursor-pointer showOpenIndents material-details-box"
