--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -13,11 +13,11 @@
         <div formArrayName="myMaterial"
           *ngFor="let myMaterial of addMyMaterial.get('myMaterial')['controls']; let i = index">
 
-          <div class="row p-t-10 mobile-padding" [formGroupName]="i">
+          <div class="row mobile-padding" [formGroupName]="i">
 
             <!-- Material Name Input Field -->
             <div
-              [ngClass]="this.data ? 'col-md-2 col-material-name col-sm-6 col-xs-12' : 'col-md-4 col-sm-6 col-xs-12'">
+              [ngClass]="this.data ? 'col-md-2 col-material-name col-sm-6 col-xs-12' : 'col-md-3 col-sm-6 col-xs-12'">
               <mat-form-field class="border-input w-100">
                 <input type="text" placeholder="Material Name*" matInput formControlName="materialName" />
                 <small
