--- a/src/app/shared/dialogs/select-supplier-address/select-supplier-address.component.html
+++ b/src/app/shared/dialogs/select-supplier-address/select-supplier-address.component.html
@@ -1,44 +1,42 @@
-<div class="header-add-edit-dialog p-r-0">
-  <div class="row width-100">
-    <div class="col-sm-10">
-      <h1 mat-dialog-title>Choose Address</h1>
-    </div>
-    <div class="col-sm-2">
-      <button type="button" class="close pull-right p-t-5" (click)="close()" aria-label="Close">
-        <span aria-hidden="true">×</span>
-      </button>
+<section class="modal-outer">
+  <div class="modal-header">
+    <h5 mat-dialog-title class="mb-0">Choose Address</h5>
+
+    <button type="button" class="close" (click)="close()" aria-label="Close">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+
+  <div mat-dialog-content class="mat-tab-add-address-modal-po">
+
+    <div class="modal-body">
+      <div class="row">
+        <div class="col-xs-12 p-t-10 show-address-supplier-modal">
+          <mat-radio-group aria-label="Select an option" name="address">
+            <div class="p-t-10 p-b-10 gray-border" *ngFor="let add of supplierAddresses">
+              <mat-radio-button class="p-l-25" (change)="onChange($event)" [value]="add" [checked]="add.primaryAddress===1">
+                <div class="max-width-of-select-address">
+                  <span *ngIf="add.addressLine1">{{add.addressLine1}}</span>
+                  <span *ngIf="add.addressLine2">, {{add.addressLine2}}</span>
+                  <span *ngIf="add.city">, {{add.city}}</span>
+                  <span *ngIf="add.state">, {{add.state}}</span>
+                  <span *ngIf="add.pinCode">, {{add.pinCode}}</span>
+                  <span *ngIf="add.gstNo"> | {{add.gstNo}}</span>
+                </div>
+              </mat-radio-button>
+            </div>
+          </mat-radio-group>
+        </div>
+      </div>
+
+      <div mat-dialog-actions>
+        <div class="col-sm-12 pt-2">
+          <button mat-raised-button class="main-background-color main-button color-white m-b-5 pull-right" [disabled]="addressId == null"
+            (click)="onselectAddress()">
+            Save
+          </button>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-
-<!-- class="mat-tab-add-address-modal-po" -->
-<div mat-dialog-content class="mat-tab-add-address-modal-po">
-
-          <div class="row">
-            <div class="col-xs-12 p-t-10 show-address-supplier-modal">
-              <mat-radio-group aria-label="Select an option" name="address">
-                <div class="p-t-10 p-b-10 gray-border" *ngFor="let add of supplierAddresses">
-                  <mat-radio-button class="p-l-25" (change)="onChange($event)" [value]="add" [checked]="add.primaryAddress===1">
-                    <div class="max-width-of-select-address">
-                       <span *ngIf="add.addressLine1">{{add.addressLine1}}</span>
-                        <span *ngIf="add.addressLine2">, {{add.addressLine2}}</span>
-                        <span *ngIf="add.city">, {{add.city}}</span>
-                        <span *ngIf="add.state">, {{add.state}}</span>
-                        <span *ngIf="add.pinCode">, {{add.pinCode}}</span>
-                        <span *ngIf="add.gstNo"> | {{add.gstNo}}</span>
-                    </div>
-                  </mat-radio-button>
-                </div>
-              </mat-radio-group>
-            </div>
-          </div>
-          <div class="pull-right p-t-5">
-            <button mat-raised-button class="main-background-color main-button color-white m-b-5"  [disabled]="addressId == null" (click)="onselectAddress()">
-              Save
-            </button>
-          </div>
-       
-     
-
-   
-</div>
+</section>
