--- a/src/app/shared/dialogs/supplier-rating/supplier-rating.component.html
+++ b/src/app/shared/dialogs/supplier-rating/supplier-rating.component.html
@@ -1,13 +1,16 @@
-<mat-dialog-content class="supplier-rating-dialog">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title">Supplier Rating</h5>
-      <button type="button" class="close" (click)="closeDialog()">
-        <span>&times;</span>
-      </button>
-    </div>
+<section class="modal-outer supplier-rating-dialog">
+  <div class="modal-header">
+    <h5 mat-dialog-title class="mb-0">Supplier Rating</h5>
+    <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+
+  <div mat-dialog-content>
+
     <div class="modal-body text-center">
-      <p class="supplier-rating-dialog__para">How much rating would you like to give supplier "{{data.supplierName}}"</p>
+      <p class="supplier-rating-dialog__para">How much rating would you like to give supplier "{{data.supplierName}}"
+      </p>
 
       <div class="d-flex justify-content-center supplier-ratings">
         <fieldset class="rating">
@@ -33,6 +36,5 @@
         <button class="btn save-button" (click)="ratingSubmission()">Save</button>
       </p>
     </div>
-
   </div>
-</mat-dialog-content>
+</section>
