--- a/src/assets/scss/pages/grn.scss
+++ b/src/assets/scss/pages/grn.scss
@@ -236,7 +236,7 @@ $mat-row-horizontal-padding: 12px;
 .create-receipt-excel, .add-receipt-via-system, .add-custom-material, .issue-to-indent-dialog, .upload-image-modal, .view-image-modal,
 .delete-bom, .payment-record-dialog, .add-receipts-dialog, .show-docs-dialog, .drafted-po-confirm-dialog, .select-currency-dialog,
 .select-contact-person-dialog, .add-address-dialog, .select-approver-dialog, .show-supplier-remarks-docs, .select-rfq-terms-dialog,
-.float-rfq-confirm-dialog, .add-users-dialog, .add-project-dialog, .deactivate-user, .add-my-material{
+.float-rfq-confirm-dialog, .add-users-dialog, .add-project-dialog, .deactivate-user, .vendor-rating-dialog, .tax-dialog, .choose-address-dialog{
   .mat-dialog-container{
     padding: 0px !important;
     overflow-x: hidden;
@@ -246,7 +246,7 @@ $mat-row-horizontal-padding: 12px;
 .create-receipt-excel, .add-receipt-via-system, .add-custom-material, .issue-to-indent-dialog, .upload-image-modal, .view-image-modal,
 .delete-bom, .payment-record-dialog, .add-receipts-dialog, .show-docs-dialog, .drafted-po-confirm-dialog, .select-currency-dialog,
 .select-contact-person-dialog, .add-address-dialog, .add-project-dialog, .add-supplier-dialog, .select-approver-dialog, .show-supplier-remarks-docs, 
-.select-rfq-terms-dialog, .float-rfq-confirm-dialog, .add-users-dialog, .deactivate-user, .add-my-material{
+.select-rfq-terms-dialog, .float-rfq-confirm-dialog, .add-users-dialog, .deactivate-user, .vendor-rating-dialog, .tax-dialog, .choose-address-dialog{
   .mat-dialog-content{
     padding: 0;
     overflow-x: hidden;
@@ -272,7 +272,7 @@ $mat-row-horizontal-padding: 12px;
 }
 
 .create-receipt-excel, .add-receipt-via-system, .delete-bom, .add-project-dialog, .add-supplier-dialog, .payment-record-dialog,
-.add-receipts-dialog, .show-docs-dialog, .select-contact-person-dialog, .add-address-dialog, .show-supplier-remarks-docs, .add-my-material{
+.add-receipts-dialog, .show-docs-dialog, .select-contact-person-dialog, .add-address-dialog, .show-supplier-remarks-docs, .vendor-rating-dialog{
   .modal-body{
     padding: 1rem 2.5rem;
   }
@@ -426,7 +426,7 @@ $mat-row-horizontal-padding: 12px;
   }
 }
 
-.delete-bom, .drafted-po-confirm-dialog, .add-users-dialog{
+.delete-bom, .drafted-po-confirm-dialog, .add-users-dialog, .choose-address-dialog{
   .modal-body{
     padding: 1.5rem 2.5rem;
   }
@@ -489,6 +489,13 @@ $mat-row-horizontal-padding: 12px;
 }
 
 .add-address-dialog{
+
+  .single-address-line .mat-radio-group .address-line{
+    &:first-child{
+      border-bottom: 1px solid #b8b8b8;
+    }
+  }
+
   .mat-radio-group .address-line{
     &:not(:first-child){
       border: 1px solid #b8b8b8;
@@ -535,6 +542,16 @@ $mat-row-horizontal-padding: 12px;
 .float-rfq-confirm-dialog{
   .modal-body{
     padding: 1rem 2.5rem 1.5rem;
+  }
+}
+
+.tax-dialog{
+  .modal-body{
+    padding: 0.8rem 4rem 2rem;
+  }
+
+  .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-infix{
+    line-height: 24px;
   }
 }
 
